Fix layout bug for Safari
The new legal-buttons were displayed above the registration forms on small devices on Safari only. This commit will fix this.

--- a/src/components/container/SignupContainer.module.scss
+++ b/src/components/container/SignupContainer.module.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-grow: 2;
+  flex-grow: 1;
   justify-content: space-between;
   max-width: 1200px;
   width: 100%;
@@ -36,7 +36,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
+    min-height: fit-content;
     
     .backButton {
       position: absolute;
